# neo-fun

./: .gitignore  CMakeLists.txt  Earthfile  README.md  azure-pipelines.yml  bpt.yaml  library.dds  library.jsonc  msvc.dds  msvc.jsonc  package.dds  package.jsonc  render.py
.github/workflows/: ci.yml
conf/: neo-tweaks.hpp
docs/: event.md  readme.md  repr.md  shared.md
src/neo/: ad_hoc_range.hpp  ad_hoc_range.test.cpp  addressof.hpp  any_iterator.hpp  any_iterator.test.cpp  any_iterator_fwd.hpp  any_range.hpp  any_range.test.cpp  any_range_fwd.hpp  archetypes.hpp  archetypes.test.cpp  arrow_proxy.hpp  assert.cpp  assert.hpp  assert.test.cpp  assignable_box.hpp  assignable_box.test.cpp  attrib.hpp  await.hpp  channel.detail.hpp  channel.hpp  channel.test.cpp  channel_fwd.hpp  co_resource.cpp  co_resource.hpp  co_resource.test.cpp  co_resource_fwd.hpp  compare.hpp  concepts.hpp  concepts.test.cpp  config-pp-c.test.c  config-pp.hpp  config-pp.test.c  config-pp.test.cpp  config.hpp  constexpr_union.hpp  constexpr_union.hpp.jinja  constexpr_union.test.cpp  coroutine.hpp  ct_optional.cpp  (+143 more)
src/neo/core/: tuple.detail.hpp  tuple.hpp
src/neo/detail/: optional.hpp  special_mems.ipp
src/neo/views/: concat.hpp  concat.test.cpp  enumerate.hpp
tools/: build-vs2019e.bat  build-vs2022e.bat  build.ps1  earthly.sh  gcc-10.jsonc  gcc-11.jsonc  gcc-9.jsonc  msvc.jsonc
